--- a/.github/workflows/tonotes_build.yml
+++ b/.github/workflows/tonotes_build.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Set Up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: "11"
+          distribution: "temurin"
+          java-version: "17"
 
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
