--- a/.github/workflows/tonotes_build.yml
+++ b/.github/workflows/tonotes_build.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
+          cache: "gradle"
 
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
