Migrate to multi-module project

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,7 @@ dependencyResolutionManagement {
 }
 rootProject.name = "ToNotes"
 include ':app'
+include ':core'
+include ':note:note_data'
+include ':note:note_domain'
+include ':note:note_ui'
