Update set soft input mode usage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ToNotes"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/Theme.ToNotes">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
