--- a/build_base.gradle
+++ b/build_base.gradle
@@ -48,4 +48,7 @@ dependencies {
 
     androidTestImplementation(AndroidXTest.JUnit)
     androidTestImplementation(AndroidXTest.espressoCore)
+    androidTestImplementation(Hilt.testing)
+    kaptAndroidTest(Hilt.compiler)
+    androidTestImplementation(AndroidXTest.testRunner)
 }
