--- a/build_compose.gradle
+++ b/build_compose.gradle
@@ -60,10 +60,9 @@ dependencies {
     testImplementation(Mockito.mockitoKotlin)
 
     androidTestImplementation(AndroidXTest.JUnit)
-    androidTestImplementation(AndroidXTest.espressoCore)
     androidTestImplementation(Compose.uiTestJUnit4)
     androidTestImplementation(Hilt.testing)
-    kaptAndroidTest(Hilt.compiler)
+    kaptAndroidTest(Hilt.androidCompiler)
     androidTestImplementation(AndroidXTest.testRunner)
 
     debugImplementation(Compose.uiTooling)
