--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -89,5 +89,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: apk/app-debug.apk
-          asset_name: ToNotes-debug.apk
+          asset_name: app-debug.apk
           asset_content_type: application/zip
