Set up account feature module

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,6 @@ include ':core'
 include ':note:note_data'
 include ':note:note_domain'
 include ':note:note_ui'
+include ':account:account_data'
+include ':account:account_domain'
+include ':account:account_ui'
