Create core_ui module

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,7 @@ dependencyResolutionManagement {
 rootProject.name = "ToNotes"
 include ':app'
 include ':core'
+include ':core_ui'
 include ':note:note_data'
 include ':note:note_domain'
 include ':note:note_ui'
